configurando empacotador de js

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "primeiro projeto com npm + git",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack --mode production js/app.js --output ./main.js",
+    "dev": "webpack --mode development --watch js/app.js --output ./main.js"
   },
   "repository": {
     "type": "git",
@@ -21,12 +22,15 @@
   "homepage": "https://github.com/ttalessoft/projeto1#readme",
   "dependencies": {
     "bootstrap": "^4.4.1",
+    "fsevents": "^2.1.2",
     "jquery": "^3.4.1",
     "lodash": "^4.17.15"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
-    "eslint-plugin-import": "^2.20.1"
+    "eslint-plugin-import": "^2.20.1",
+    "webpack": "^4.42.0",
+    "webpack-cli": "^3.3.11"
   }
 }
